// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LinkCta renders a button when only onclick is provided 1`] = `
<button
  className="eVoRYN"
  href={null}
  onClick={[Function]}
  rel=""
  size={null}
  target="_self"
>
  I am a link
</button>
`;

exports[`LinkCta renders a default LinkCta 1`] = `
<a
  className="cCHMdr"
  href="http://localhost/"
  onClick={null}
  rel=""
  size={null}
  target="_self"
>
  I am a link
</a>
`;

exports[`LinkCta renders a span when no href or onClick provided 1`] = `
<span
  className="edGDaW"
  href={null}
  onClick={null}
  rel=""
  size={null}
  target="_self"
>
  I am a link
</span>
`;

exports[`LinkCta static size as pixels 1`] = `
<span
  className="djLvKu"
  href={null}
  onClick={null}
  rel=""
  size="20px"
  target="_self"
>
  I am a link
</span>
`;

exports[`LinkCta static size from typography 1`] = `
<span
  className="djLvKu"
  href={null}
  onClick={null}
  rel=""
  size="normal"
  target="_self"
>
  I am a link
</span>
`;
